[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootflask"
version = "0.0.1"
description = "A web app framework base on flask."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "deadblue", email = "root@dead.blue"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
requires-python = ">=3.9"
dependencies = [
    "flask~=3.0.0"
]

[project.urls]
Homepage = "https://github.com/deadblue/bootflask"
Repository = "https://github.com/deadblue/bootflask"

[tool.hatch.build.targets.wheel]
packages = [ "src/bootflask" ]

[tool.hatch.build]
directory = ".dist"